feat: complete preview function

--- a/src/components/image/index.mdx
+++ b/src/components/image/index.mdx
@@ -67,3 +67,16 @@ import "./style/doc.less";
     </div>
   </div>
 </Playground>
+
+## 大图预览
+
+<Playground>
+  <div className="demo-preview">
+    <div className="block">
+      <Image
+        src="https://fuss10.elemecdn.com/8/27/f01c15bb73e1ef3793e64e6b7bbccjpeg.jpeg"
+        preview
+      /> 
+    </div>
+  </div>
+</Playground>
