doc: inprove image document

--- a/src/components/image/index.mdx
+++ b/src/components/image/index.mdx
@@ -80,3 +80,13 @@ import "./style/doc.less";
     </div>
   </div>
 </Playground>
+
+## API
+
+属性 | 说明 | 类型 | 默认值
+---|---|---|---
+src | 图片源 | string | -
+alt | 原生 alt | string | -
+fit | 确定图片如何适应容器框，同原生 object-fit | string | fill
+preview | 开启图片预览功能 | boolean | false
+z-index | 设置图片预览的 z-index | number | 2000
