--- a/src/components/radio/index.mdx
+++ b/src/components/radio/index.mdx
@@ -8,7 +8,6 @@ sidebar: true
 import { Playground } from 'docz';
 import { useState } from 'react';
 import Radio from './';
-import "./style/doc.less";
 
 # Radio 组件
 
@@ -31,7 +30,7 @@ import "./style/doc.less";
 <Playground>
   {
     () => {
-      const [val, setVal] = useState(3);
+      const [val, setVal] = useState(1);
 
       const handleChange = e => {
         setVal(e.target.value);
@@ -39,10 +38,31 @@ import "./style/doc.less";
 
       return (
         <Radio.Group value={val} onChange={(e) => {handleChange(e)}}>
-          <Radio value={3}>Radio 3</Radio>
-          <Radio value={4}>Radio 4</Radio>
+          <Radio value={1}>Radio 1</Radio>
+          <Radio value={2}>Radio 2</Radio>
         </Radio.Group>
       )
     }
   }
 </Playground>
+
+## API
+
+### Radio
+
+属性 | 说明 | 类型 | 默认值
+---|---|---|---
+checked | 是否选中 | boolean | false
+defaultChecked | 初始是否选中 | boolean | false
+disabled | 是否禁用 | boolean | false
+value | 根据 value 进行比较，判断是否选中 | any | -
+
+### RadioGroup
+
+属性 | 说明 | 类型 | 默认值
+---|---|---|---
+value | 当前选中的值 | any | -
+defaultValue | 默认选中的值 | any | -
+name | 原生 name 属性 | string | -
+disabled | 是否禁用 | boolean | false
+onChange | 选项变化时的回调函数 | Function(e:Event) | -
